--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
         <service
             android:name=".ForegroundService"
             android:enabled="true"
-            android:exported="false" />
-        <activity android:name=".MainActivity">
+            android:exported="false"
+            />
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
